// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroupField component render should render a list of checkboxes 1`] = `
<FieldSet>
  <Label
    as="legend"
    colour="grey"
  />
  <CheckboxWrapper
    key="1"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      id="option 1"
      name="option 1"
      onChange={[Function]}
      type="checkbox"
      value={1}
    />
    <Label
      colour="grey"
      htmlFor="option 1"
    >
      option 1 (1)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="2"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      id="option 2"
      name="option 2"
      onChange={[Function]}
      type="checkbox"
      value={2}
    />
    <Label
      colour="grey"
      htmlFor="option 2"
    >
      option 2 (2)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="3"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      id="option 3"
      name="option 3"
      onChange={[Function]}
      type="checkbox"
      value={3}
    />
    <Label
      colour="grey"
      htmlFor="option 3"
    >
      option 3 (3)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="4"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      id="option 4"
      name="option 4"
      onChange={[Function]}
      type="checkbox"
      value={4}
    />
    <Label
      colour="grey"
      htmlFor="option 4"
    >
      option 4 (4)
    </Label>
  </CheckboxWrapper>
</FieldSet>
`;

exports[`CheckboxGroupField component render should render an error if field is touched and there is an error defined for the current field 1`] = `
<FieldSet>
  <Label
    as="legend"
    colour="grey"
  />
  <CheckboxWrapper
    key="1"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      error="some error"
      id="option 1"
      name="option 1"
      onChange={[Function]}
      type="checkbox"
      value={1}
    />
    <Label
      colour="grey"
      htmlFor="option 1"
    >
      option 1 (1)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="2"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      error="some error"
      id="option 2"
      name="option 2"
      onChange={[Function]}
      type="checkbox"
      value={2}
    />
    <Label
      colour="grey"
      htmlFor="option 2"
    >
      option 2 (2)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="3"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      error="some error"
      id="option 3"
      name="option 3"
      onChange={[Function]}
      type="checkbox"
      value={3}
    />
    <Label
      colour="grey"
      htmlFor="option 3"
    >
      option 3 (3)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="4"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      error="some error"
      id="option 4"
      name="option 4"
      onChange={[Function]}
      type="checkbox"
      value={4}
    />
    <Label
      colour="grey"
      htmlFor="option 4"
    >
      option 4 (4)
    </Label>
  </CheckboxWrapper>
  <Error
    colour="red"
  >
    some error
  </Error>
</FieldSet>
`;

exports[`CheckboxGroupField component render should render check checkboxes if their values are already in the field values list 1`] = `
<FieldSet>
  <Label
    as="legend"
    colour="grey"
  />
  <CheckboxWrapper
    key="1"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      id="option 1"
      name="option 1"
      onChange={[Function]}
      type="checkbox"
      value={1}
    />
    <Label
      colour="grey"
      htmlFor="option 1"
    >
      option 1 (1)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="2"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      id="option 2"
      name="option 2"
      onChange={[Function]}
      type="checkbox"
      value={2}
    />
    <Label
      colour="grey"
      htmlFor="option 2"
    >
      option 2 (2)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="3"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      id="option 3"
      name="option 3"
      onChange={[Function]}
      type="checkbox"
      value={3}
    />
    <Label
      colour="grey"
      htmlFor="option 3"
    >
      option 3 (3)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="4"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={false}
      id="option 4"
      name="option 4"
      onChange={[Function]}
      type="checkbox"
      value={4}
    />
    <Label
      colour="grey"
      htmlFor="option 4"
    >
      option 4 (4)
    </Label>
  </CheckboxWrapper>
</FieldSet>
`;

exports[`CheckboxGroupField component render should render some disabled checkboxes if their values are not in the field values list and the maximum allowed checked checkboxes number is already met 1`] = `
<FieldSet>
  <Label
    as="legend"
    colour="grey"
  />
  <CheckboxWrapper
    key="1"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={true}
      id="option 1"
      name="option 1"
      onChange={[Function]}
      type="checkbox"
      value={1}
    />
    <Label
      colour="grey"
      htmlFor="option 1"
    >
      option 1 (1)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="2"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={true}
      id="option 2"
      name="option 2"
      onChange={[Function]}
      type="checkbox"
      value={2}
    />
    <Label
      colour="grey"
      htmlFor="option 2"
    >
      option 2 (2)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="3"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={true}
      id="option 3"
      name="option 3"
      onChange={[Function]}
      type="checkbox"
      value={3}
    />
    <Label
      colour="grey"
      htmlFor="option 3"
    >
      option 3 (3)
    </Label>
  </CheckboxWrapper>
  <CheckboxWrapper
    key="4"
  >
    <Checkbox
      borderColour="grey"
      borderErrorColour="red"
      checkColour="blue"
      checked={false}
      disabled={true}
      id="option 4"
      name="option 4"
      onChange={[Function]}
      type="checkbox"
      value={4}
    />
    <Label
      colour="grey"
      htmlFor="option 4"
    >
      option 4 (4)
    </Label>
  </CheckboxWrapper>
</FieldSet>
`;
